Fixed a strange layout issue on mobile.

--- a/css/main.css
+++ b/css/main.css
@@ -272,7 +272,7 @@ MEDIA QUERIES
     CONTACT STYLING
     ******************************************/
     #contact>.social-wrapper li {
-        width: 198px;
+        width: 250px;
     }
 }
 
